styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Poppins:wght@400;500;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

html {
    scroll-behavior: smooth;
    background-color: black;
}

a {
    text-decoration: none;
}

h1, h2, h3, h4, h5, h6, span {
    color: black;
    text-align: center;
    line-height: 1.25;
}

a {
    color: black;
    position: relative;
}

p {
    color: white;
    font-size: 20px;
}

li {
    list-style-type: none;
}

.flex {
    display: flex;
}

.flex-1 {
    flex: 1
}

.row {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 0 16px;
}

h1 {
    font-size: 36px;
}

.container {
    padding: 50px 0;
}

.section__title {
    margin-bottom: 20px;
}

.link__hover-effect:after {
    content: "";
    position: absolute;
    height: 3px;
    width: 0%;
    bottom: -3px;
    right: 0;
    transition: all 300ms ease;
}

.link__hover-effect--black:after {
    background-color: black;
}

.link__hover-effect--white:after {
    background-color: white;
}

.link__hover-effect:hover:after {
    width: 100%;
    left: 0;
}

/* NAVIGATION BAR */
#about-me {
    background: rgb(49,236,86);
    background: linear-gradient(90deg, rgba(49,236,86,1) 20%, rgba(239,3,108,1) 80%);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

nav {
    height: 100px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px;
}

.nav__link--list {
    display: flex;
}

.nav__link--anchor {
    margin: 0 12px;
    color: black;
    text-decoration: none;
    font-weight: 700;
    transition: all 300ms ease;
}

.nav__link--anchor:hover {
    transform: scale(1.2);
    filter: brightness(80%);
}

.nav__link--anchor-primary {
    background-color: black;
    color: white;
    padding: 8px 20px;
    transition: all 300ms ease;
    box-shadow: 0.7rem 0.7rem #31EC56;
}

.nav__link--anchor-primary:hover {
    transform: scale(0.9);
    filter: brightness(80%);
}

.personal__logo {
    color: white;
    background-color: black;
    font-size: 24px;
    margin: 0 12px;
    font-weight: bold;
    border: 1px solid black;
    padding: 8px 20px;
    box-shadow: 0.7rem 0.7rem #EF036C;
}

.about-me__info--container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 8px 20px;
    text-align: center;
    margin-bottom: 48px;
}

.about-me__picture--mask {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
    margin-bottom: 28px;
}

.about-me__picture {
    width: 100%;
}

.about-me__info--inner-container {
    background-color: white;
    padding: 16px 40px;
    box-shadow: 0.7rem 0.7rem black;
}

.about-me__info--inner-container p{
    color: black;
    margin-bottom: 16px;
}

.about-me__info--title {
    margin-bottom: 16px;
}

.about-me__link {
    font-size: 32px;
    color: black;
    text-decoration: none;
    padding: 0 16px;
    transition: all 300ms ease;
}

.about-me__link:hover {
    font-size: 30px;
    filter: brightness(80%);
    opacity: 0.5;
}

.about-me__img-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.about-me__img {
    max-height: 300px;
}

.language__img {
    width: 100%;
    max-width: 100px;
    transition: all 300ms ease;
    margin-bottom: 20px;
}

.language:hover .language__img {
    filter: brightness(80%);
    opacity: 0.80;
    transform: scale(0.9);
}

.language {
    width: 20%;
    position: relative;
    display: flex;
    justify-content: center;
}

#languages {
    background-color: black;
}

#languages span {
    color: white;
}

#languages h1 {
    color: white;
}

.language__img--wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
}

.language__list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.language__name {
    color: white;
    bottom: 0;
    position: absolute;
    transform: scale(0);
    transition: all 300ms ease;
}

.language:hover .language__name {
    transform: scale(1);
}

#projects {
    background: rgb(4,221,106);
    background: linear-gradient(90deg, rgba(4,221,106,1) 35%, rgba(161,254,30,1) 65%);
}

.project {
    margin-bottom: 135px;
}

.project:last-child {
    margin-bottom: 40px;
}

.project__list {
    padding-top: 40px;
}

.project__wrapper {
    max-width: 550px;
    margin: 0 auto;
    position: relative;
    padding: 30px;
    background-color: white;
    box-shadow: 0.7rem 0.7rem black;
    text-align: center;
    transition: all 450ms ease;
}

.project__description {
    text-align: left;
}

.project__wrapper:hover .project__img{
    opacity: 0.5;
    filter: blur(10px);
    transform: scale(1.02)
}

.project__wrapper:hover .project__links {
    opacity: 1;
}

.project__wrapper p {
    color: black;
}

.project__title {
    padding-top: 20px;
}

.project__img {
    width: 100%;
    transition: all 450ms ease;
}

.project__links {
    opacity: 0;
    position: absolute;
    top: 10%;
    left: 0;
    right: 0;
    transition: all 450ms ease;
}

.project__link {
    text-decoration: none;
    font-size: 128px;
    transition: all 300ms ease;
}

.project__link:hover {
    opacity: 0.7;
}

#footer {
    width: 100%;
    background-color: black;
}

#footer h1 {
    color: white;
}

#footer a {
    color: white;
    margin-top: 16px;
}

.footer__social--list {
    display: flex;
    max-width: 500px;
    justify-content: space-around;
    margin: 0 auto;
}

.footer__row {
    padding: 4%;
}

/* Small phones, tablets and large smartphones */
@media (max-width:768px) {
    nav {
        padding: 12px 12px;
    }

    h1 {
        font-size: 24px;
    }

    .about-me__info--para {
        font-size: 14px;
    }

    .personal__logo {
        font-size: 16px;
    }

    .language {
        width: calc(100%/3);
    }

    .row {
        padding: 48px;
    }

    .project__wrapper {
        pointer-events: none;
        position: relative;
        padding-bottom: 48px;
    }

    .project__links {
        opacity: 1;
        position: absolute;
        top: auto;
        left: 0;
        right: 0;
        transition: all 450ms ease;
        z-index: 3;
    }

    .project__link {
        pointer-events: auto;
        text-decoration: none;
        font-size: 32px;
        margin: 0px 12px;
    }

    .project__wrapper:hover .project__img{
        opacity: 1;
        filter: blur(0px);
        transform: scale(1);
    }
    
    .project__wrapper:hover .project__links {
        opacity: 1;
    }
}

@media (max-width: 480px) {
    .nav__link {
        display: none;
    }

    .about-me__img {
        width: 80%;
    }

    .project__description {
        font-size: 12px;
    }
}

